--- a/sass/group/layout/sidebar__markket/sidebar__marketplace.scss
+++ b/sass/group/layout/sidebar__markket/sidebar__marketplace.scss
@@ -9,12 +9,18 @@
     grid-template-columns: 100%;
     grid-template-rows: 17% 83%;
     position: relative;
+
     @media only screen and (max-width:800px) {
         & {
             display: none;
         }
     }
 
+    @media only screen and (max-width:400px) {
+        & {
+            display: none;
+        }
+    }
 
     &--fixed-part {
         width: 100%;
