--- a/sass/main-market.scss
+++ b/sass/main-market.scss
@@ -9,3 +9,4 @@
 @import"./shop/layout/sidebar__markket/Categories.scss";
 @import"./shop/layout/product-page__market/product__market.scss";
 @import"./shop/mobile/product/product__mobile.scss";
+@import"./group/layout/post/res-post.scss";
