--- a/sass/group/layout/ads/ads.scss
+++ b/sass/group/layout/ads/ads.scss
@@ -2,8 +2,15 @@
     width: 100%;
     height: 100%;
     display: grid;
+
     @media only screen and (max-width:1099px) {
         & {
+            display: none;
+        }
+    }
+
+    @media only screen and (max-width:400px) {
+        &{
             display: none;
         }
     }
