--- a/sass/group/layout/maincon.scss
+++ b/sass/group/layout/maincon.scss
@@ -49,9 +49,39 @@
             }
         }
 
+
         &--box {
             border: 2px solid red;
         }
 
     }
+}
+
+.shorrr{
+    display: none;
+    visibility: hidden;
+    @media only screen and (max-width:400px) {
+        &{
+            display:inline;
+            visibility: visible;
+        }
+    }
+    @media only screen and (max-width:350px) {
+        width: 100vw;
+        height: 100vh;
+    }
+}
+
+.ShOo{
+    @media only screen and (max-width:340px) {
+        &{
+            width: 2rem !important;
+            height: 2rem !important;
+        }
+    }
+}
+
+.HHHe{
+    width: 100%;
+    height: 100vh;
 }
