--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
 .nav {
   background-color: #242526;
   width: 100vw;
-  height: 8.5vh;
+  height: 7.5vh;
   overflow: hidden;
   align-items: center;
   justify-items: center;
   grid-template-rows: 100%;
   box-sizing: border-box;
+  
 }
 
 .nav-grid {
   display: grid;
   grid-template-rows: 100%;
-  grid-template-columns: 30rem 101rem 22.5rem;
+  grid-template-columns: 30rem 75.3rem 47rem;
   width: 100%;
   height: 100%;
 }
@@ -20,7 +21,11 @@
 .nav-grid--box {
   width: 100%;
   height: 100%;
+  border: 2px solid red;
 }
+
+
+/* my search box with facebook icon */
 
 .nav-grid--box--search {
   width: 100%;
@@ -66,6 +71,52 @@
   font-size: 1.5rem;
 }
 
+/* my search box with facebook icon */
+
+.nav-grid--box--nav{
+  /* border: 2px solid red; */
+  margin-left: 16rem;
+}
+.nav-grid--box--nav--grid{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 100%;
+  grid-template-columns: repeat(5,118.600px);
+}
+.nav-grid--box--nav--grid--box{
+  /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+  justify-content: center;
+
+}
+
+.nav-grid--box--nav--grid--box--inner{
+width: 9rem;
+height: 4rem;
+background-color: #0080ff;
+}
+.nav-grid--box--nav--grid--box--icon{
+  fill: #A7B1AC;
+}
+.active{
+  fill: #2374e1;
+}
+.active-lines{
+  margin-top: 5rem;
+  width: 10.5rem;
+  height: 0.3rem;
+  background-color: #2374e1;
+  position: absolute;
+}
+.nav-grid--box--main{
+  border: 2px solid red;
+  margin-left: 29rem;
+  box-sizing: border-box;
+}
 @media only screen and (max-width: 450px) {
   .nav {
     display: none;
@@ -90,8 +141,8 @@
 
 .nav-search-box--logo--search-box {
   background-color: #3A3B3C;
-  height: 4rem;
-  width: 27rem;
+  height: 1rem;
+  width: 33rem;
   outline: none;
   border: none;
   border-radius: 25px;
@@ -102,27 +153,27 @@
   padding: 2rem;
   display: inline;
   padding-top: 1rem;
-  padding-left: 0rem;
+  padding-left: -2rem;
   color: #E4E6EB;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 .nav-grid--box--search--search--input::placeholder{
   color: #A7B1AC;
   font-family: 'Roboto', sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 .nav-grid--box--search--search--input--icon{
   color: white;
-
 }
 
 .fa-1x{
-  font-size: 1.5em !important;
+  font-size: 1.4em !important;
   color: #A7B1AC;
   position: absolute;
   margin-left: 1.3rem;
-
 }
+
+
 @media only screen and (max-width: 1100px) {
   .nav-search-box--logo--search-box {
     padding: 0%;
